Wrappers/MyGUI.Export/Generate/MyGUI.Export_EditBox.h


		MYGUIEXPORT Convert<bool>::Type MYGUICALL ExportEditBox_GetEditPassword( MyGUI::Widget* _native )
		{
			return Convert<bool>::To( static_cast< MyGUI::Edit * >(_native)->getEditPassword( ) );
		}

		MYGUIEXPORT void MYGUICALL ExportEditBox_SetEditPassword( MyGUI::Widget* _native , Convert<bool>::Type _value )
		{
			static_cast< MyGUI::Edit * >(_native)->setEditPassword( Convert<bool>::From( _value ) );
		}

		MYGUIEXPORT Convert<bool>::Type MYGUICALL ExportEditBox_GetEditReadOnly( MyGUI::Widget* _native )
		{
			return Convert<bool>::To( static_cast< MyGUI::Edit * >(_native)->getEditReadOnly( ) );
		}

		MYGUIEXPORT void MYGUICALL ExportEditBox_SetEditReadOnly( MyGUI::Widget* _native , Convert<bool>::Type _value )
		{
			static_cast< MyGUI::Edit * >(_native)->setEditReadOnly( Convert<bool>::From( _value ) );
		}

		MYGUIEXPORT void MYGUICALL ExportEditBox_EraseText_start_count( MyGUI::Widget* _native,
			Convert<size_t>::Type _start ,
			Convert<size_t>::Type _count )
		{
			static_cast< MyGUI::Edit * >(_native)->eraseText(
				Convert<size_t>::From( _start ) ,
				Convert<size_t>::From( _count ) );
		}

		MYGUIEXPORT void MYGUICALL ExportEditBox_AddText_text( MyGUI::Widget* _native,
			Convert<const MyGUI::UString &>::Type _text )
		{
			static_cast< MyGUI::Edit * >(_native)->addText(
				Convert<const MyGUI::UString &>::From( _text ) );
		}

		MYGUIEXPORT void MYGUICALL ExportEditBox_InsertText_text_index( MyGUI::Widget* _native,
			Convert<const MyGUI::UString &>::Type _text ,
			Convert<size_t>::Type _index )
		{
			static_cast< MyGUI::Edit * >(_native)->insertText(
				Convert<const MyGUI::UString &>::From( _text ) ,
				Convert<size_t>::From( _index ) );
		}

		MYGUIEXPORT Convert<size_t>::Type MYGUICALL ExportEditBox_GetMaxTextLength( MyGUI::Widget* _native )
		{
			return Convert<size_t>::To( static_cast< MyGUI::Edit * >(_native)->getMaxTextLength( ) );
		}

		MYGUIEXPORT void MYGUICALL ExportEditBox_SetMaxTextLength( MyGUI::Widget* _native , Convert<size_t>::Type _value )
		{
			static_cast< MyGUI::Edit * >(_native)->setMaxTextLength( Convert<size_t>::From( _value ) );
		}

		MYGUIEXPORT Convert<bool>::Type MYGUICALL ExportEditBox_GetOverflowToTheLeft( MyGUI::Widget* _native )
		{
			return Convert<bool>::To( static_cast< MyGUI::Edit * >(_native)->getOverflowToTheLeft( ) );
		}

		MYGUIEXPORT void MYGUICALL ExportEditBox_SetOverflowToTheLeft( MyGUI::Widget* _native , Convert<bool>::Type _value )
		{
			static_cast< MyGUI::Edit * >(_native)->setOverflowToTheLeft( Convert<bool>::From( _value ) );
		}

		MYGUIEXPORT Convert<size_t>::Type MYGUICALL ExportEditBox_GetTextLength( MyGUI::Widget* _native )
		{
			return Convert<size_t>::To( static_cast< MyGUI::Edit * >(_native)->getTextLength( ) );
		}

		MYGUIEXPORT Convert<MyGUI::UString>::Type MYGUICALL ExportEditBox_GetOnlyText( MyGUI::Widget* _native )
		{
			return Convert<MyGUI::UString>::To( static_cast< MyGUI::Edit * >(_native)->getOnlyText( ) );
		}

		MYGUIEXPORT void MYGUICALL ExportEditBox_SetOnlyText( MyGUI::Widget* _native , Convert<const MyGUI::UString &>::Type _value )
		{
			static_cast< MyGUI::Edit * >(_native)->setOnlyText( Convert<const MyGUI::UString &>::From( _value ) );
		}

		MYGUIEXPORT Convert<size_t>::Type MYGUICALL ExportEditBox_GetTextCursor( MyGUI::Widget* _native )
		{
			return Convert<size_t>::To( static_cast< MyGUI::Edit * >(_native)->getTextCursor( ) );
		}

		MYGUIEXPORT void MYGUICALL ExportEditBox_SetTextCursor( MyGUI::Widget* _native , Convert<size_t>::Type _value )
		{
			static_cast< MyGUI::Edit * >(_native)->setTextCursor( Convert<size_t>::From( _value ) );
		}

		MYGUIEXPORT void MYGUICALL ExportEditBox_SetTextSelectionColour_value( MyGUI::Widget* _native,
			Convert<const MyGUI::Colour &>::Type _value )
		{
			static_cast< MyGUI::Edit * >(_native)->setTextSelectionColour(
				Convert<const MyGUI::Colour &>::From( _value ) );
		}

		MYGUIEXPORT Convert<bool>::Type MYGUICALL ExportEditBox_IsTextSelection( MyGUI::Widget* _native )
		{
			return Convert<bool>::To( static_cast< MyGUI::Edit * >(_native)->isTextSelection( ) );
		}

		MYGUIEXPORT Convert<MyGUI::UString>::Type MYGUICALL ExportEditBox_GetTextSelection( MyGUI::Widget* _native )
		{
			return Convert<MyGUI::UString>::To( static_cast< MyGUI::Edit * >(_native)->getTextSelection( ) );
		}

		MYGUIEXPORT void MYGUICALL ExportEditBox_DeleteTextSelection( MyGUI::Widget* _native )
		{
			static_cast< MyGUI::Edit * >(_native)->deleteTextSelection( );
		}

		MYGUIEXPORT void MYGUICALL ExportEditBox_SetTextSelection_start_end( MyGUI::Widget* _native,
			Convert<size_t>::Type _start ,
			Convert<size_t>::Type _end )
		{
			static_cast< MyGUI::Edit * >(_native)->setTextSelection(
				Convert<size_t>::From( _start ) ,
				Convert<size_t>::From( _end ) );
		}

		MYGUIEXPORT Convert<MyGUI::UString>::Type MYGUICALL ExportEditBox_GetTextInterval_start_count( MyGUI::Widget* _native,
			Convert<size_t>::Type _start ,
			Convert<size_t>::Type _count )
		{
			return Convert<MyGUI::UString>::To( static_cast< MyGUI::Edit * >(_native)->getTextInterval(
				Convert<size_t>::From( _start ) ,
				Convert<size_t>::From( _count ) ));
		}

		MYGUIEXPORT Convert<size_t>::Type MYGUICALL ExportEditBox_GetTextSelectionLength( MyGUI::Widget* _native )
		{
			return Convert<size_t>::To( static_cast< MyGUI::Edit * >(_native)->getTextSelectionLength( ) );
		}

		MYGUIEXPORT Convert<size_t>::Type MYGUICALL ExportEditBox_GetTextSelectionEnd( MyGUI::Widget* _native )
		{
			return Convert<size_t>::To( static_cast< MyGUI::Edit * >(_native)->getTextSelectionEnd( ) );
		}

		MYGUIEXPORT Convert<size_t>::Type MYGUICALL ExportEditBox_GetTextSelectionStart( MyGUI::Widget* _native )
		{
			return Convert<size_t>::To( static_cast< MyGUI::Edit * >(_native)->getTextSelectionStart( ) );
		}

		MYGUIEXPORT void MYGUICALL ExportEditBox_SetTextIntervalColour_start_count_colour( MyGUI::Widget* _native,
			Convert<size_t>::Type _start ,
			Convert<size_t>::Type _count ,
			Convert<const MyGUI::Colour &>::Type _colour )
		{
			static_cast< MyGUI::Edit * >(_native)->setTextIntervalColour(
				Convert<size_t>::From( _start ) ,
				Convert<size_t>::From( _count ) ,
				Convert<const MyGUI::Colour &>::From( _colour ) );
		}